# social_network_bot

./: README.md  conf.py  main.py  pyproject.toml
class_based_tasks/: base_task.py  jwt_auth_mixin.py
models/: __init__.py  models.py
spiders/: social_network_spider.py
tasks/: auth.py  base_task.py  posts.py  users.py
tests/: conftest.py  mocks.py  test_auth_tasks.py  test_posts.py  test_users_tasks.py
