[tool.poetry]
name = "social_network_bot"
version = "0.1.0"
description = ""
authors = ["vladimir <webmagic@ukr.net>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
asyncio = "^3.4.3"
Faker = "^8.1.0"
ipython = "^7.22.0"
pytest = "^6.2.3"
pydantic = "^1.8.1"
pytest-asyncio = "^0.15.0"
pytest-aiohttp = "^0.3.0"
pytest-mock = "^3.5.1"
pytest-pythonpath = "^0.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
